🐛 Debug React rendering issue
- Add simple debug component to test basic React functionality
- Temporarily disable full app to isolate rendering problems
- Fix favicon path for GitHub Pages
- Add console logs to track app mounting

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Lora:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/duniya-rides-wanderlust-trails/favicon.ico">
 
     <meta property="og:title" content="Duniya Rides – India's Most Trusted Trip Planner" />
     <meta property="og:description" content="Plan your dream trip across India with Duniya Rides. We offer personalized, affordable travel packages with complete planning services." />
