🎉 Enable full Duniya Rides app
✅ Debug confirmed React working perfectly
✅ Enable all travel website components
✅ Remove loading screen from index.html
✅ Full app with Home, Destinations, Contact, etc.
✅ Enhanced error handling and logging

Ready for production deployment!

--- a/index.html
+++ b/index.html
@@ -22,21 +22,7 @@
   </head>
 
   <body>
-    <div id="root">
-      <div style="min-height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; font-family: 'Poppins', Arial, sans-serif; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white;">
-        <div style="text-align: center; padding: 20px;">
-          <h1 style="font-size: 3rem; margin-bottom: 10px; text-shadow: 2px 2px 4px rgba(0,0,0,0.3);">🌍 Duniya Rides</h1>
-          <p style="font-size: 1.2rem; margin-bottom: 30px; opacity: 0.9;">India's Most Trusted Trip Planner</p>
-          <div style="display: inline-block; width: 40px; height: 40px; border: 4px solid rgba(255,255,255,0.3); border-radius: 50%; border-top-color: white; animation: spin 1s ease-in-out infinite;"></div>
-          <p style="margin-top: 20px; font-size: 0.9rem; opacity: 0.8;">Loading your adventure...</p>
-        </div>
-      </div>
-      <style>
-        @keyframes spin {
-          to { transform: rotate(360deg); }
-        }
-      </style>
-    </div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
